--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -5,4 +5,101 @@ body {
 body {
   background-color: #000000;
   color: rgb(255, 255, 255);
+  margin: 0 45px;
+}
+
+main {
+  margin: 0 30px;
+}
+
+header.header-website {
+  height: 75px;
+  margin-bottom: 15px;
+}
+
+.section-display {
+  display: flex;
+}
+.section-display .text-content {
+  flex: 1;
+}
+.section-display .text-content .title {
+  font-size: 70px;
+  line-height: 1.1;
+  font-weight: 700;
+}
+.section-display .text-content .paragraph {
+  font-size: 30px;
+  line-height: 1.1;
+}
+.section-display .illustration {
+  flex: 1;
+}
+.section-display .illustration img {
+  max-width: 100%;
+  display: block;
+  margin: auto;
+}
+.btn {
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  border: solid 1px;
+  transition: all ease 0.3s;
+}
+.btn:hover {
+  transform: translateY(-10px);
+}
+.btn.btn-primary {
+  background-color: rgb(201, 26, 26);
+  color: rgb(255, 255, 255);
+  border-color: rgb(110.6828193833, 14.3171806167, 14.3171806167);
+}
+.btn.btn-primary:hover {
+  background-color: rgb(110, 110, 110);
+  color: rgb(255, 255, 255);
+  border-color: #000000;
+}
+.btn.btn-secondary {
+  background-color: rgb(110, 110, 110);
+  color: rgb(255, 255, 255);
+  border-color: #3b3b3b;
+}
+.btn.btn-secondary:hover {
+  background-color: rgb(110, 110, 110);
+  color: rgb(255, 255, 255);
+  border-color: #000000;
+}
+.btn.btn-dark {
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  border-color: black;
+}
+.btn.btn-dark:hover {
+  background-color: rgb(110, 110, 110);
+  color: rgb(255, 255, 255);
+  border-color: #000000;
+}
+.btn.btn-gray {
+  background-color: rgb(181, 181, 181);
+  color: #000000;
+  border-color: #828282;
+}
+.btn.btn-gray:hover {
+  background-color: rgb(110, 110, 110);
+  color: rgb(255, 255, 255);
+  border-color: #000000;
+}
+.btn.btn-white {
+  background-color: rgb(255, 255, 255);
+  color: #000000;
+  border-color: #cccccc;
+}
+.btn.btn-white:hover {
+  background-color: rgb(110, 110, 110);
+  color: rgb(255, 255, 255);
+  border-color: #000000;
 }/*# sourceMappingURL=main.css.map */
