--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -1,4 +1,14 @@
 body{
     background-color: $dark;
     color: $white;
+    margin: 0 45px
+}
+
+main{
+    margin:0 30px;
+}
+
+header.header-website{
+height: 75px;
+margin-bottom: 15px;
 }
