--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   font: 19px/23px Montserrat, sans-serif;
 }
@@ -153,4 +154,42 @@ header.header-website {
   background-color: rgb(110, 110, 110);
   color: rgb(255, 255, 255);
   border-color: #000000;
+}
+
+.animate-fusée {
+  transition: all 1s ease;
+  display: inline-block;
+}
+.animate-fusée:hover {
+  animation: moveFusee 2s;
+}
+
+@keyframes moveFusee {
+  0% {
+    transform: translate(0px 0px);
+  }
+  10% {
+    transform: translate(2px -1px);
+  }
+  20% {
+    transform: translate(-4px 2px);
+  }
+  30% {
+    transform: translate(6px -3px);
+  }
+  40% {
+    transform: translate(-8px 4px);
+  }
+  50% {
+    transform: translate(10px -5px);
+  }
+  60% {
+    transform: translate(-12px 6px);
+  }
+  70% {
+    transform: translate(14px -7px);
+  }
+  100% {
+    transform: translate(1500px, -1500px);
+  }
 }/*# sourceMappingURL=main.css.map */
