--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,6 +1,8 @@
 @import "variables";
+@import "mixins/mixins";
 @import "typography";
 @import "layout";
 @import "components";
 @import "buttons";
 @import "animations";
+@import "navbar";
