--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -3,19 +3,25 @@ body {
   font: 19px/23px Montserrat, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #000000;
   color: rgb(255, 255, 255);
-  margin: 0 45px;
+  margin: 0 20px;
+}
+@media screen and (min-width: 768px) {
+  body {
+    margin: 0 30px;
+  }
 }
 
-main {
-  margin: 0 30px;
-}
-
-header.header-website {
-  height: 75px;
-  margin-bottom: 15px;
+@media screen and (min-width: 768px) {
+  main {
+    margin: 0 30px;
+  }
 }
 
 picture.emoji-gif img {
@@ -97,15 +103,43 @@ picture.emoji-gif img {
   transform: scale(1.2);
 }
 
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  animation: loader-hide 2s forwards;
+}
+#loader .loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid rgb(201, 26, 26);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 0.5s linear infinite;
+}
+
 .btn {
-  padding: 15px 30px;
+  padding: 10px 15px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 18px;
   font-weight: bold;
   border: solid 1px;
   transition: all ease 0.3s;
+  display: inline-block;
+}
+@media screen and (min-width: 768px) {
+  .btn {
+    font-size: 18px;
+    padding: 15px 30px;
+  }
 }
 .btn:hover {
   transform: translateY(-10px);
@@ -196,5 +230,84 @@ picture.emoji-gif img {
   }
   100% {
     transform: translate(1500px, -1500px);
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes loader-hide {
+  80% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  99% {
+    opacity: 0;
+    transform: scale(10);
+  }
+  100% {
+    display: none;
+    opacity: 0;
+  }
+}
+.header-website {
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: #000000;
+}
+.header-website .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+.header-website .navbar .menu .menu-input {
+  display: none;
+}
+.header-website .navbar .menu .menu-input:checked ~ .dropdown-menu {
+  max-height: 100vh;
+}
+@media screen and (min-width: 768px) {
+  .header-website .navbar .menu .menu-input-label {
+    display: none;
+  }
+}
+.header-website .navbar .menu .dropdown-menu {
+  transition: max-height ease-out 1s;
+  max-height: 0;
+  background-color: #000000;
+  position: absolute;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  top: 100%;
+}
+.header-website .navbar .menu .dropdown-menu .nav-links {
+  padding: 0px;
+}
+.header-website .navbar .menu .dropdown-menu .nav-links .nav-link {
+  display: block;
+  padding: 10px;
+  text-align: center;
+}
+.header-website .navbar .menu .dropdown-menu .nav-links .nav-link a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+@media screen and (min-width: 768px) {
+  .header-website .navbar .menu .dropdown-menu {
+    max-height: 100vh;
+    position: relative;
+  }
+  .header-website .navbar .menu .dropdown-menu .nav-links {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px;
   }
 }/*# sourceMappingURL=main.css.map */
