--- a/styles/sass/_animations.scss
+++ b/styles/sass/_animations.scss
@@ -8,15 +8,40 @@
 
 @keyframes moveFusee {
     @for $i from 0 through 7 {
-        #{($i * 10)}% {
+        #{($i * 10)}%{
             transform: translate(
             if($i % 2 == 0, -2px * $i, 2px * $i)
             if($i % 2 == 0, 1px *$i, -1px * $i)
             );
         }
+    
     }
     100% {
         transform: translate(1500px, -1500px);
-        
+        }
+
+}
+
+@keyframes spin {
+    from { transform: rotate(0deg); 
+    }
+    to { transform: rotate(360deg); 
+    }
+}
+
+@keyframes loader-hide {
+    0% {
+    }
+    80% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    99% {
+        opacity: 0;
+        transform: scale(10);
+    }
+    100% {
+        display: none;
+        opacity: 0;
     }
 }
