--- a/styles/sass/_components.scss
+++ b/styles/sass/_components.scss
@@ -84,3 +84,25 @@
         }    
     }
 }
+
+#loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:$dark ;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    z-index: 1000;
+    animation: loader-hide 2s forwards;
+    .loader{
+        border: 16px solid #f3f3f3; 
+        border-top: 16px solid $primary; 
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 0.5s linear infinite;
+    }
+}
