--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -29,10 +29,17 @@ picture.emoji-gif img {
   height: 1em;
 }
 
+#Gototop {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 500;
+}
+
 .section-display {
   display: flex;
-  margin-bottom: 10rem;
   flex-direction: column;
+  margin-bottom: 5rem;
 }
 @media screen and (min-width: 768px) {
   .section-display.right-text-content {
@@ -87,17 +94,17 @@ picture.emoji-gif img {
   display: block;
   margin: auto;
 }
-.competences-icons {
+.stack-technique-icons {
   display: flex;
   justify-content: center;
   gap: 30px;
   font-size: 40px;
   color: rgb(201, 26, 26);
 }
-.competences-icons i {
+.stack-technique-icons i {
   transition: all 0.8s ease;
 }
-.competences-icons i:hover {
+.stack-technique-icons i:hover {
   cursor: pointer;
   color: rgb(110, 110, 110);
   transform: scale(1.2);
@@ -109,11 +116,46 @@ picture.emoji-gif img {
   gap: 32px;
   margin-top: 60px;
 }
+.list-blog a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
 .list-blog .blog {
   box-shadow: 1px 0 20px rgb(255, 255, 255);
   padding: 15px 30px;
   border-radius: 5px;
+  position: relative;
 }
+.list-blog .blog h4, .list-blog .blog p {
+  position: relative;
+  z-index: 6;
+  background-color: transparent;
+}
+.list-blog .blog:hover {
+  cursor: pointer;
+}
+.list-blog .blog:hover .link-blog {
+  color: rgb(110, 110, 110);
+  width: calc(100% - 25px);
+  height: calc(100% - 25px);
+  border-radius: 5px;
+}
+.list-blog .blog .link-blog {
+  text-align: right;
+  display: block;
+  background-color: rgb(201, 26, 26);
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px 10px 15px 15px;
+  border-bottom-left-radius: 100%;
+  transition: 0.5s ease-out;
+  width: 15px;
+  height: 20px;
+  opacity: 0.8;
+  z-index: 5;
+}
+
 #loader {
   position: fixed;
   top: 0;
@@ -134,6 +176,25 @@ picture.emoji-gif img {
   width: 120px;
   height: 120px;
   animation: spin 0.5s linear infinite;
+}
+
+.competences-bars {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.competences-bars .competence-bar .competence-bar-bar {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid rgb(110, 110, 110);
+}
+.competences-bars .competence-bar .competence-bar-bar .competence-bar-bar-fill {
+  height: 100%;
+  background-color: rgb(201, 26, 26);
+  border-radius: 10px;
+  animation: showGrowth 1s ease infinite alternate;
 }
 
 .btn {
@@ -265,6 +326,14 @@ picture.emoji-gif img {
     opacity: 0;
   }
 }
+@keyframes showGrowth {
+  from {
+    padding-right: 0px;
+  }
+  to {
+    padding-right: 1%;
+  }
+}
 .header-website {
   position: sticky;
   top: 0;
@@ -308,8 +377,8 @@ picture.emoji-gif img {
   text-align: center;
 }
 .header-website .navbar .menu .dropdown-menu .nav-links .nav-link a {
-  color: rgb(255, 255, 255);
   text-decoration: none;
+  color: rgb(255, 255, 255);
 }
 @media screen and (min-width: 768px) {
   .header-website .navbar .menu .dropdown-menu {
@@ -321,4 +390,15 @@ picture.emoji-gif img {
     justify-content: space-between;
     padding: 0px;
   }
+}
+
+footer {
+  margin-top: 50px;
+  padding: 40px;
+}
+footer .credits {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }/*# sourceMappingURL=main.css.map */
