--- a/styles/sass/_animations.scss
+++ b/styles/sass/_animations.scss
@@ -14,9 +14,9 @@
             if($i % 2 == 0, 1px *$i, -1px * $i)
             );
         }
-    
     }
-    100% {
+    
+        100% {
         transform: translate(1500px, -1500px);
         }
 
@@ -43,5 +43,14 @@
     100% {
         display: none;
         opacity: 0;
+    }
+}
+
+@keyframes showGrowth{
+    from{
+        padding-right: 0px;
+    }
+    to{
+        padding-right: 1%;
     }
 }
