--- a/styles/sass/_components.scss
+++ b/styles/sass/_components.scss
@@ -86,7 +86,18 @@
 
 .list-blog {
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(400px, 1fr));
+    grid-template-columns: repeat(1, 1fr);
+    @media screen and (min-width: 768px){
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (min-width: 1440px){
+        grid-template-columns: repeat(3, 1fr);
+        
+    }
+    @media screen and (min-width: 1920px){
+        grid-template-columns: repeat(4, 1fr);
+        
+    }
     gap: 32px;
     margin-top: 60px;
     a{
